edit log4j.properties, create logs.log in the src

--- a/src/main/java/freeIt/log4j.properties
+++ b/src/main/java/freeIt/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{
 
 # Direct log messages to a log file
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.FILE.File=./target/logging/logs.log
+log4j.appender.FILE.File=./src/logging/logs.log
 log4j.appender.FILE.MaxFileSize=10MB
 log4j.appender.FILE.threshold=INFO
 log4j.appender.FILE.MaxBackupIndex=10
